gitops/espresso/apps/ollama/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    pod-security.kubernetes.io/enforce: baseline
