gitops/espresso/apps/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-internal
  namespace: ollama
spec:
  clusterIP: None
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: http
